--- a/demo.Rmd
+++ b/demo.Rmd
@@ -187,3 +187,20 @@ Indigenous mortality data from the [indmortality package](https://github.com/rob
 ### Australian Demographic Data Base
 
 Demographic database from the [addb package](https://github.com/robjhyndman/addb).
+
+<br>
+
+### Learning tower
+
+The goal of learningtower is to provide a userfriendly R package to provide easy access to a subset of variables from PISA data collected from the OECD, for years 2000 - 2018, collected on a three year basis.
+
+The Programme for International Student Assessment (PISA) is an international assessment measuring student performance in reading, mathematical and scientific literacy.
+
+PISA assesses the extent to which 15-year-old students have acquired some of the knowledge and skills that are essential for full participation in society, and how well they are prepared for lifelong learning in the areas of reading, mathematical and scientific literacy
+
+In 2018, PISA involved 79 countries and 600,000+ students worldwide.
+
+```{r, eval=FALSE}
+devtools::install_github("ropenscilabs/learningtower")
+```
+
