Update column in summary table

--- a/OZdatasets.Rmd
+++ b/OZdatasets.Rmd
@@ -37,39 +37,39 @@ Its purpose is to document datasets previously created at OzUnconf events, as we
 ## Summary table
 ```{r, echo = FALSE}
 library(DT)
-df<-rbind(c("ozflights", "transport", "package", "Flight data"),
-          c("ozroaddeaths", "transport", "package", "Road deaths"),
-          c("vehicles", "transport", "link", "Vehicle use"),
-          c("beaches", "environment", "link", "Sydney beach data"),
-          c("river", "environment", "link", "River and rainfall data"),
-          c("birds", "environment", "link", "Data about Australian birds"),
-          c("atlas", "environment", "link", "Atlas of Australian biodiversity"),
-          c("fires", "environment", "link", "Bush fire data"),
-          c("bomrang", "environment", "package", "access to BOM data"), 
-          c("QOL enviro", "environment", "links", "links to QLD environment and Maps data"), 
-          c("CSIRO data", "environment", "links", "CSIRO data portal, some behind confidentiality"),
-          c("Ocean data", "environment", "links", "Australian ocean data network"), 
-          c("DataVic", "environment", "links", "Access to enironmental and non environmental data from DataVic"),
+df<-rbind(c("ozflights", "OzUnconf17", "transport", "package", "Flight data"),
+          c("ozroaddeaths", "OzUnconf17", "transport", "package", "Road deaths"),
+          c("vehicles", "", "transport", "link", "Vehicle use"),
+          c("beaches", "R-Ladies Sydney", "environment", "link", "Sydney beach data"),
+          c("river", "", "environment", "link", "River and rainfall data"),
+          c("birds", "", "environment", "link", "Data about Australian birds"),
+          c("atlas", "", "environment", "link", "Atlas of Australian biodiversity"),
+          c("fires", "", "environment", "link", "Bush fire data"),
+          c("bomrang", "", "environment", "package", "access to BOM data"), 
+          c("QOL enviro", "", "environment", "links", "links to QLD environment and Maps data"), 
+          c("CSIRO data", "", "environment", "links", "CSIRO data portal, some behind confidentiality"),
+          c("Ocean data", "", "environment", "links", "Australian ocean data network"), 
+          c("DataVic", "", "environment", "links", "Access to enironmental and non environmental data from DataVic"),
           
-          c("ozbabynames", "demographics", "package", "Baby names in Australia"),
-          c("eechidna", "demographics", "package", "Election and census data"),
-          c("ozdata", "demographics", "package", "Australian economic data"),
-          c("raustats", "demographics", "package-BROKEN??", "Household survey"),
-          c("longitudinal", "demographics", "link", "Longitudinal"),
-          c("marriageequality", "demographics", "link", "Data from the 2017 marriage equality survey"),
-          c("aflinfo", "sport", "package", "AFL data"),
-          c("fitzRoy", "sport", "package", "AFL data"),
-          c("cricketdata", "sport", "package", "Cricket data"),
-          c("ozmaps", "maps", "package", "Maps of Australia"),
-          c("ozdates", "misc", "package", "Maps of Australia"),
-          c("smokeybear", "OzUncon19", "package", "Air quality datasets"), 
-          c("learningtower", "OzUncon19", "package", "PISA data "), 
-          c("hackerspace", "misc", "links", "Access to data from hackerspace projects"), 
-          c("indmortality", "demographics", "package", "Indigenous mortality data"),
-          c("demdatabase", "demographics", "package", "Australian demographics data base")
+          c("ozbabynames", "OzUnconf18", "demographics", "package", "Baby names in Australia"),
+          c("eechidna", "OzUnconf16", "demographics", "package", "Election and census data"),
+          c("ozdata", "OzUnconf17", "demographics", "package", "Australian economic data"),
+          c("raustats", "", "demographics", "package", "Household survey"),
+          c("longitudinal", "", "demographics", "link", "Longitudinal"),
+          c("marriageequality", "", "demographics", "link", "Data from the 2017 marriage equality survey"),
+          c("aflinfo", "OzUnconf17", "sport", "package", "AFL data"),
+          c("fitzRoy", "", "sport", "package", "AFL data"),
+          c("cricketdata", "OzUnconf17", "sport", "package", "Cricket data"),
+          c("ozmaps", "", "maps", "package", "Maps of Australia"),
+          c("ozdates", "", "misc", "package", "Maps of Australia"),
+          c("smokeybear", "OzUncon19", "envionment", "package", "Air quality datasets"), 
+          c("learningtower", "OzUncon19", "demographics", "package", "PISA data"), 
+          c("hackerspace", "", "misc", "links", "Access to data from hackerspace projects"), 
+          c("indmortality", "", "demographics", "package", "Indigenous mortality data"),
+          c("demdatabase", "", "demographics", "package", "Australian demographics data base")
 )
 
-DT::datatable(df, colnames = c("Name","Topic","Package/Link","Data explanation"), 
+DT::datatable(df, colnames = c("Name","Origin", "Topic","Package/Link","Data explanation"), 
               options = list(
                 pageLength = 20,
                 lengthMenu = c(10, 20, 50)
